tests/NormalTests/paczka1/fuzzy1/66725556.err
Error in line 1: hHwKuh7nY1 A150 23,0
Error in line 14: IOG A902 97,3
Error in line 18: IOG A150 46,0
Error in line 25: GIOc8IBD A902 141,4
Error in line 26: GIOc8IBD S802 30,4
